[FIX] sap.m.Token: adjust the icon position to be aligned in the middle
BCP: 1580200385

--- a/src/themelib_sap_bluecrystal/src/sap/m/themes/sap_bluecrystal/Token.less
+++ b/src/themelib_sap_bluecrystal/src/sap/m/themes/sap_bluecrystal/Token.less
@@ -47,7 +47,7 @@
 }
 
 .sapMTokenIcon {
-	padding: 0.25rem 0.5rem;
+	padding: 0.2rem 0.5rem;
 	font-size: @sapMFontLargeSize;
 	color: @sapUiElement;
 	vertical-align: middle;
@@ -65,7 +65,7 @@
 
 .sapUiSizeCompact .sapMTokenIcon {
 	font-size: @sapMFontSmallSize;
-	padding: 0.1rem 0.25rem;
+	padding: 0.15rem 0.25rem;
 	vertical-align: baseline;
 }
 
